spacing between snapshot locations is fixed

--- a/app/assets/stylesheets/trips.scss
+++ b/app/assets/stylesheets/trips.scss
@@ -149,7 +149,7 @@
 }
 
 #trip-snapshot-ul li{
-	 margin-left:15px;
+	 margin-left:14px;
 	 width:150px;
 	 text-align: center;
 	 height:100%;
@@ -158,13 +158,13 @@
 #trip-snapshot-link-ul{
 	margin-bottom: 0px;
 	height:0px;
-	margin-left:100px;
+	margin-left:99px;
 }
 
 #trip-snapshot-link-ul li{
     border-top: 3px dotted gray;
     width: 150px;
-    margin-left: 15px;
+    margin-left: 14px;
     position: relative;
     top: -54px;
     z-index: 1;
